# 3rdparty

./: CMakeLists.txt  README.md
cmake/: 3rdpartyCache.cmake  ProjectPatch.cmake  ThirdpartyCache.cmake
config/: env
config/platform/: Linux_Renesas_aarch64.cmake
